--- a/springboot-shiro-ehcache/src/main/resources/application.yml
+++ b/springboot-shiro-ehcache/src/main/resources/application.yml
@@ -22,6 +22,10 @@ spring:
     host: 127.0.0.1
     connect-timeout: 5000
 
+mybatis-plus:
+  configuration:
+    log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
+
 shiro:
   login-url: /login
   anons:
