--- a/springboot-shiro-ehcache/pom.xml
+++ b/springboot-shiro-ehcache/pom.xml
@@ -58,7 +58,7 @@
 
         <dependency>
             <groupId>org.apache.shiro</groupId>
-            <artifactId>shiro-spring-boot-web-starter</artifactId>
+            <artifactId>shiro-spring</artifactId>
             <version>1.7.0</version>
         </dependency>
 
