--- a/springboot-shiro-ehcache/src/main/resources/application.yml
+++ b/springboot-shiro-ehcache/src/main/resources/application.yml
@@ -5,7 +5,7 @@ server:
 
 spring:
   datasource:
-    driver-class-name: com.mysql.jdbc.Driver
+    driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://localhost:3306/spring_shiro?useUnicode=true&characterEncoding=UTF-8
     username: root
     password: root
@@ -27,13 +27,14 @@ mybatis-plus:
     log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
 
 shiro:
-  login-url: /login
+  login-url: /auth/login
   anons:
-    - /login.html
-    - /index.html
-    - /login
-    - /register
-    - /register.html
+    - auth/login.html
+    - index.html
+    - /auth/login
+    - /auth/register
+    - /auth/goRegister
+    - auth/register.html
   authcs:
     - /**
   hashAlgorithm: MD5
