--- a/springboot-shiro-ehcache/pom.xml
+++ b/springboot-shiro-ehcache/pom.xml
@@ -62,12 +62,17 @@
             <artifactId>shiro-spring</artifactId>
             <version>1.7.0</version>
         </dependency>
-
         <dependency>
             <groupId>org.apache.shiro</groupId>
             <artifactId>shiro-ehcache</artifactId>
             <version>1.7.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.crazycake</groupId>
+            <artifactId>shiro-redis</artifactId>
+            <version>3.3.1</version>
+        </dependency>
+
 
         <dependency>
             <groupId>com.github.theborakompanioni</groupId>
