--- a/springboot-shiro-ehcache/src/main/resources/application.yml
+++ b/springboot-shiro-ehcache/src/main/resources/application.yml
@@ -31,6 +31,7 @@ shiro:
     - auth/login.html
     - index.html
     - /auth/login
+    - /auth/logout
     - /auth/register
     - /auth/goRegister
     - auth/register.html
