基本功能验证实现

--- a/sboot-system/src/main/resources/application-prod.yml
+++ b/sboot-system/src/main/resources/application-prod.yml
@@ -1,25 +1,29 @@
 server:
-  port: 8080
+  port: 8081
   servlet:
     context-path: /sboot
 
 spring:
+  web:
+    resources:
+      static-locations: classpath:/templates/,classpath:/static/**
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://localhost:3306/adminly?useUnicode=true&characterEncoding=UTF-8
     username: root
     password: 123456
     type: com.alibaba.druid.pool.DruidDataSource
-  thymeleaf:
-    cache: false
-    enabled: true
-    prefix: classpath:/templates/
-    suffix: .html
-    encoding: UTF-8
   redis:
     port: 6379
     host: 127.0.0.1
     connect-timeout: 5000
+  jackson:
+    date-format: yyyy-MM-dd HH:mm:ss
+    time-zone: GMT+8
+
+hibernate:
+  validator:
+    fail_fast
 
 mybatis-plus:
   configuration:
@@ -30,7 +34,13 @@ shiro:
   login-url: /auth/login
   anons:
     - /auth/login
+    - /auth/logout
     - /auth/register
+    - /swagger-ui/**
+    - /swagger-resources/**
+    - /webjars/**
+    - /v3/**
+    - /images/**
   authcs:
     - /**
   hash-algorithm: MD5
@@ -38,8 +48,14 @@ shiro:
 
 sboot:
   single-login: false
+  default-token-timeout: 86400000
 
 springfox:
   documentation:
     swagger-ui:
-      enabled: false
+      enabled: true
+
+
+#jwt:
+#  config:
+#    key: Cc%ijAMvodvDl15C6UkUBSsA!E&D%ram^uQ#aK#gZWVx1Yq1TNI!$YS0qaTYd17#
