--- a/sboot-system/src/main/resources/application-dev.yml
+++ b/sboot-system/src/main/resources/application-dev.yml
@@ -1,9 +1,13 @@
 server:
-  port: 8080
+  port: 8081
   servlet:
     context-path: /sboot
 
 spring:
+  web:
+    resources:
+      static-locations: classpath:/META-INF/resources/,classpath:/resources/,
+        classpath:/static/,classpath:/public/,file:static/
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://localhost:3306/adminly?useUnicode=true&characterEncoding=UTF-8
@@ -20,6 +24,13 @@ spring:
     port: 6379
     host: 127.0.0.1
     connect-timeout: 5000
+  jackson:
+    date-format: yyyy-MM-dd HH:mm:ss
+    time-zone: GMT+8
+
+hibernate:
+  validator:
+    fail_fast
 
 mybatis-plus:
   configuration:
@@ -30,11 +41,13 @@ shiro:
   login-url: /auth/login
   anons:
     - /auth/login
+    - /auth/logout
     - /auth/register
     - /swagger-ui/**
     - /swagger-resources/**
     - /webjars/**
     - /v3/**
+    - /images/**
   authcs:
     - /**
   hash-algorithm: MD5
@@ -42,6 +55,7 @@ shiro:
 
 sboot:
   single-login: false
+  default-token-timeout: 86400000
 
 springfox:
   documentation:
