--- a/sboot-system/pom.xml
+++ b/sboot-system/pom.xml
@@ -146,6 +146,12 @@
             <version>1.4.1.Final</version>
         </dependency>
 
+        <dependency>
+            <groupId>cn.novelweb</groupId>
+            <artifactId>tool</artifactId>
+            <version>1.3.0</version>
+        </dependency>
+
     </dependencies>
 
     <build>
