--- a/sboot-system/src/main/resources/application-dev.yml
+++ b/sboot-system/src/main/resources/application-dev.yml
@@ -10,7 +10,7 @@ spring:
         classpath:/static/,classpath:/public/,file:static/
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/adminly?useUnicode=true&characterEncoding=UTF-8
+    url: jdbc:mysql://localhost:3306/adminly?useUnicode=true&characterEncoding=UTF-8&serverTimezone=GMT%2b8
     username: root
     password: 123456
     type: com.alibaba.druid.pool.DruidDataSource
@@ -55,7 +55,8 @@ shiro:
 
 sboot:
   single-login: false
-  default-token-timeout: 86400000
+  default-token-timeout: 1800000
+  remeber-me-timeout: 604800000
 
 springfox:
   documentation:
