--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
 		<module>sboot-commons</module>
 		<module>sboot-logging</module>
 		<module>sboot-auth</module>
+		<module>sboot-mq</module>
 	</modules>
 
 	<!-- 统一管理jar包版本 -->
