--- a/sboot-quartz/src/main/resources/application.yml
+++ b/sboot-quartz/src/main/resources/application.yml
@@ -2,6 +2,8 @@ server:
   port: 8082
 
 spring:
+  main:
+    allow-bean-definition-overriding: true
   profiles:
     active: dev
   application:
@@ -9,6 +11,12 @@ spring:
   jackson:
     date-format: yyyy-MM-dd HH:mm:ss
     time-zone: GMT+8
+  rabbitmq:
+    listener:
+      simple:
+        acknowledge-mode: manual  # 默认为自动ack，设置为手动ack保证消费端消息不丢失
+    publisher-confirm-type: correlated  # 配置confirms模式
+    publisher-returns: true   # 配置returns模式，默认关闭，交换机发送到队列时进行回调，一般不需要开启
   quartz:
     defaultJobGroupName: SBOOT_JOB_GROUP
     defaultTriggerGroupName: SBOOT_TRIGGER_GROUP
@@ -54,7 +62,14 @@ shiro:
     - /webjars/**
     - /v3/**
     - /images/**
+    - /websocket/**
   authcs:
     - /**
   hash-algorithm: MD5
   hash-iterations: 1024
+
+mq:
+  config:
+    queue: quartzQueue
+    exchange: quartzExchange
+    routingKey: quartz.#
