--- a/sboot-system/src/main/resources/application.yml
+++ b/sboot-system/src/main/resources/application.yml
@@ -1,5 +1,10 @@
 server:
   port: 8081
+#  ssl:
+#    key-store: keystore.p12
+#    key-store-password: 123456
+#    key-store-type: PKCS12
+#    key-alias: tomcat
 
 spring:
   profiles:
@@ -13,12 +18,12 @@ spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
     type: com.alibaba.druid.pool.DruidDataSource
-  thymeleaf:
-    cache: false
-    enabled: true
-    prefix: classpath:/templates/
-    suffix: .html
-    encoding: UTF-8
+#  thymeleaf:
+#    cache: false
+#    enabled: true
+#    prefix: classpath:/templates/
+#    suffix: .html
+#    encoding: UTF-8
   jackson:
     date-format: yyyy-MM-dd HH:mm:ss
     time-zone: GMT+8
