--- a/sboot-logging/pom.xml
+++ b/sboot-logging/pom.xml
@@ -25,6 +25,12 @@
 			<artifactId>sboot-commons</artifactId>
 			<version>${project.version}</version>
 		</dependency>
+		<dependency>
+			<groupId>priv.yue.sboot</groupId>
+			<artifactId>sboot-mq</artifactId>
+			<version>1.0-SNAPSHOT</version>
+			<scope>compile</scope>
+		</dependency>
 
 	</dependencies>
 
