--- a/sboot-system/src/main/resources/application-dev.yml
+++ b/sboot-system/src/main/resources/application-dev.yml
@@ -11,6 +11,11 @@ spring:
     port: 6379
     host: 127.0.0.1
     connect-timeout: 5000
+  rabbitmq:
+    host: localhost
+    port: 5672
+    username: root
+    password: 123456
 
 mybatis-plus:
   configuration:
