--- a/sboot-commons/pom.xml
+++ b/sboot-commons/pom.xml
@@ -68,6 +68,18 @@
 			<artifactId>hutool-all</artifactId>
 		</dependency>
 
+		<!-- https://mvnrepository.com/artifact/org.jxls/jxls -->
+		<dependency>
+			<groupId>org.jxls</groupId>
+			<artifactId>jxls</artifactId>
+			<version>2.9.0</version>
+		</dependency>
+		<dependency>
+			<groupId>org.jxls</groupId>
+			<artifactId>jxls-poi</artifactId>
+			<version>2.9.0</version>
+		</dependency>
+
 
 	</dependencies>
 
