--- a/sboot-logging/pom.xml
+++ b/sboot-logging/pom.xml
@@ -66,11 +66,11 @@
 		</dependency>
 
 		<!--热部署-->
-		<!--<dependency>
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-devtools</artifactId>
 			<scope>runtime</scope>
-		</dependency>-->
+		</dependency>
 
 	</dependencies>
 
