sentinel自定义返回信息 /user/list 公共兜底类

--- a/sboot-system/pom.xml
+++ b/sboot-system/pom.xml
@@ -35,6 +35,8 @@
                 </exclusion>
             </exclusions>
         </dependency>
+
+        <!-- sentinel对nacos适配 使用nacos配置sentinel规则 -->
         <dependency>
             <groupId>com.alibaba.csp</groupId>
             <artifactId>sentinel-datasource-nacos</artifactId>
