--- a/sboot-auth/pom.xml
+++ b/sboot-auth/pom.xml
@@ -60,6 +60,13 @@
 			<version>3.0.0</version>
 		</dependency>
 
+		<!--验证码-->
+		<dependency>
+			<groupId>com.github.whvcse</groupId>
+			<artifactId>easy-captcha</artifactId>
+			<version>1.6.2</version>
+		</dependency>
+
 		<!--JWT-->
 		<dependency>
 			<groupId>io.jsonwebtoken</groupId>
