--- a/sboot-common/pom.xml
+++ b/sboot-common/pom.xml
@@ -12,9 +12,11 @@
 	<artifactId>sboot-common</artifactId>
 
 	<dependencies>
+
 		<dependency>
 			<groupId>com.baomidou</groupId>
 			<artifactId>mybatis-plus-boot-starter</artifactId>
+			<optional>true</optional>
 		</dependency>
 
 		<dependency>
