--- a/sboot-logging/sboot-logging-server/pom.xml
+++ b/sboot-logging/sboot-logging-server/pom.xml
@@ -3,17 +3,17 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<parent>
-		<artifactId>sboot</artifactId>
+		<artifactId>sboot-logging</artifactId>
 		<groupId>priv.yue.sboot</groupId>
 		<version>1.0-SNAPSHOT</version>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
 
-	<artifactId>sboot-tools</artifactId>
+	<artifactId>sboot-logging-server</artifactId>
 
 	<dependencies>
 
-		<!--alibaba nacos-->
+		<!-- nacos 注册中心 -->
 		<dependency>
 			<groupId>com.alibaba.cloud</groupId>
 			<artifactId>spring-cloud-starter-alibaba-nacos-discovery</artifactId>
@@ -25,10 +25,23 @@
 			<artifactId>spring-cloud-starter-alibaba-nacos-config</artifactId>
 		</dependency>
 
-		<!-- spring boot web -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
+		</dependency>
+
+		<!-- swagger -->
+		<dependency>
+			<groupId>io.springfox</groupId>
+			<artifactId>springfox-boot-starter</artifactId>
+			<version>3.0.0</version>
+		</dependency>
+
+		<!-- sboot logging core -->
+		<dependency>
+			<groupId>${project.groupId}</groupId>
+			<artifactId>sboot-logging-core</artifactId>
+			<version>${project.version}</version>
 		</dependency>
 
 		<!-- sboot auth core -->
@@ -38,20 +51,21 @@
 			<version>${project.version}</version>
 		</dependency>
 
-		<!-- email -->
+		<!--数据源-->
 		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-mail</artifactId>
+			<groupId>com.baomidou</groupId>
+			<artifactId>mybatis-plus-boot-starter</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>com.alibaba</groupId>
+			<artifactId>druid-spring-boot-starter</artifactId>
 		</dependency>
 
-		<!--swagger-->
-		<dependency>
-			<groupId>io.springfox</groupId>
-			<artifactId>springfox-boot-starter</artifactId>
-			<version>3.0.0</version>
-		</dependency>
-
-		<!-- 热部署 -->
+		<!--热部署-->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-devtools</artifactId>
@@ -77,7 +91,7 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 				<configuration>
-					<mainClass>priv.yue.ToolsApp</mainClass>
+					<mainClass>priv.yue.LoggingApp</mainClass>
 				</configuration>
 				<executions>
 					<execution>
@@ -98,4 +112,5 @@
 			</plugin>
 		</plugins>
 	</build>
+
 </project>
