--- a/sboot-logging/sboot-logging-server/src/main/resources/bootstrap.yml
+++ b/sboot-logging/sboot-logging-server/src/main/resources/bootstrap.yml
@@ -1,9 +1,9 @@
 server:
-  port: 9890
+  port: 9892
 
 spring:
   application:
-    name: sboot-system
+    name: sboot-logging
   cloud:
     nacos:
       discovery:
@@ -27,14 +27,11 @@ spring:
         extension-configs[3]:
           data-id: sboot-common-stream-dev.yml
           refresh: true
-        extension-configs[4]:
-          data-id: sboot-common-stream-log-dev.yml
-          refresh: true
 
 
 ########################## Nacos默认拉取的配置文件说明 ##########################
 # ${spring.application.name}-${spring/profile.active}.${spring.cloud.nacos.config.file-extension}
-# 匹配以上格式，最终拉取的配置文件为 sboot-system-dev.yml
+# 匹配以上格式，最终拉取的配置文件为 sboot-logging-dev.yml
 
 
 
