--- a/sboot-auth/sboot-auth-server/src/main/resources/bootstrap.yml
+++ b/sboot-auth/sboot-auth-server/src/main/resources/bootstrap.yml
@@ -68,3 +68,11 @@ nacos:
   addr: localhost:8848
   namespace: 8cb6f1af-d79d-4969-a272-ad470f474c66
   group: DEFAULT_GROUP
+
+---
+spring:
+  profiles: k8s
+nacos:
+  addr: 10.96.0.104:8848
+  namespace: k8s
+  group: DEFAULT_GROUP
