--- a/sboot-system/src/main/resources/bootstrap.yml
+++ b/sboot-system/src/main/resources/bootstrap.yml
@@ -35,6 +35,10 @@ spring:
           data-id: sboot-common-stream-log.yml
           group: ${nacos.group}
           refresh: true
+        extension-configs[5]:
+          data-id: sboot-common-seata.yml
+          group: ${nacos.group}
+          refresh: true
 
 
 ########################## Nacos默认拉取的配置文件说明 ##########################
@@ -83,3 +87,11 @@ nacos:
   addr: host.docker.internal:8848
   namespace: 8cb6f1af-d79d-4969-a272-ad470f474c66
   group: DOCKER_GROUP
+
+---
+spring:
+  profiles: k8s
+nacos:
+  addr: 10.96.0.104:8848
+  namespace: k8s
+  group: DEFAULT_GROUP
