--- a/sboot-system/src/main/resources/bootstrap.yml
+++ b/sboot-system/src/main/resources/bootstrap.yml
@@ -39,6 +39,10 @@ spring:
           data-id: sboot-common-seata.yml
           group: ${nacos.group}
           refresh: true
+        extension-configs[6]:
+          data-id: sboot-common-logback.yml
+          group: ${nacos.group}
+          refresh: true
 
 
 ########################## Nacos默认拉取的配置文件说明 ##########################
