--- a/sboot-tools/src/main/resources/bootstrap.yml
+++ b/sboot-tools/src/main/resources/bootstrap.yml
@@ -19,6 +19,10 @@ spring:
           data-id: sboot-common-redis.yml
           group: ${nacos.group}
           refresh: true
+        extension-configs[1]:
+          data-id: sboot-common-logback.yml
+          group: ${nacos.group}
+          refresh: true
 
 
 ########################## Nacos默认拉取的配置文件说明 ##########################
