--- a/sboot-logging/sboot-logging-server/src/main/resources/bootstrap.yml
+++ b/sboot-logging/sboot-logging-server/src/main/resources/bootstrap.yml
@@ -34,6 +34,10 @@ spring:
           data-id: sboot-common-stream.yml
           group: ${nacos.group}
           refresh: true
+        extension-configs[4]:
+          data-id: sboot-common-logback.yml
+          group: ${nacos.group}
+          refresh: true
 
 
 ########################## Nacos默认拉取的配置文件说明 ##########################
