--- a/sboot-common/pom.xml
+++ b/sboot-common/pom.xml
@@ -25,20 +25,6 @@
 			<optional>true</optional>
 		</dependency>
 
-		<!-- jsckson-->
-		<!--<dependency>
-			<groupId>com.fasterxml.jackson.core</groupId>
-			<artifactId>jackson-databind</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>com.fasterxml.jackson.core</groupId>
-			<artifactId>jackson-core</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>com.fasterxml.jackson.core</groupId>
-			<artifactId>jackson-annotations</artifactId>
-		</dependency>-->
-
 		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
@@ -72,10 +58,11 @@
 			<artifactId>hutool-all</artifactId>
 		</dependency>
 
-
-
-
-
+		<!-- logstash -->
+		<dependency>
+			<groupId>net.logstash.logback</groupId>
+			<artifactId>logstash-logback-encoder</artifactId>
+		</dependency>
 
 	</dependencies>
 
